# IBloFunMatch

./: .gitignore  CMakeLists.txt  IBloFunMatch.cc  IBloFunMatch.py  README.md  TO_DO.txt  example_permovec.py  old_iblofunmatch.py  pyproject.toml
Notebooks/: Basic_example_article.ipynb  Block_Function_intuition.ipynb  Block_function_0_geometric_rectangles.ipynb  Block_function_concentric.ipynb  COIL20.ipynb  COIL20_class.ipynb  COIL20_class.py  COIL_data_cycles.ipynb  Class_interaction_block_function.ipynb  Computation-analysis-JSC.ipynb  Example-JSC.ipynb  Example_BlockFunct_computation.ipynb  Experiment_two_circles_two_classes.ipynb  Far Circles.ipynb  Fleet_Behavior.ipynb  Gudhi-Ripser-use.ipynb  IBloFunMatch_inter.py  Iris.ipynb  Kruskal-MNIST.ipynb  MNIST_0_matching.ipynb  MTree_matrix_matching.ipynb  Matching-Diagrams-and-Stability.ipynb  Matching_Diagram_0.ipynb  Matching_Stability.ipynb  Mixed_blobs.ipynb  Moving_Point.ipynb  Nested_Bars_examples.ipynb  PCA_MNIST.ipynb  SamplesTDQ.ipynb  Simple_Example_Block_Function.ipynb  Stability_0_matching_example.ipynb  StructuralSymilarity.ipynb  Z_example.txt  Z_example_2.txt  Zm_example.txt  bootstrap_COIL20_class.py
Notebooks-JoSC/: Computation-analysis-JSC.ipynb  Example-JSC.ipynb  Memory-analysis.ipynb  Runtime-analysis.ipynb
Notebooks/Old_notebooks/: Block_Function_intuition.ipynb  COIL20_class.ipynb  Class_interaction_block_function.ipynb  Iris.ipynb  Moving_Point.ipynb  Nested_Bars_examples.ipynb  PCA_MNIST.ipynb  SamplesTDQ.ipynb  Simple_Example_Block_Function.ipynb
Notebooks/data_first/: dataset.txt  labels.txt  subset1.txt  subset2.txt  subset3.txt
Notebooks/data_second/: data2_subset1.txt  data2_subset1_labels.txt  data2_subset2.txt  dataset2.txt  dataset2_label.txt
Notebooks/data_third/: dataset2.txt  exp2_subset1.txt  exp2_subset2.txt  labels2.txt
Notebooks/datasets/example-JSC/: Z-computation
ext/gudhi/: Flag_complex_edge_collapser.h
ext/permovec/: permovec.h
ext/phat/: .gitignore  phat
ext/phat-modified/: boundary_matrix.h
ext/phat-modified/representations/: heap_column_rep.h  sparse_pivot_column.h
ext/phat/include/phat/helpers/: misc.h
ext/phat/include/phat/representations/: Uniform_representation.h  bit_tree_pivot_column.h  full_pivot_column.h  heap_pivot_column.h  vector_column_rep.h
ext/phat/python/: _phat.cpp  phat.py
ext/phat/representations/: list_column_rep.h
ext/phat/src/: benchmark.cpp  phat.cpp  self_test.cpp  simple_example.cpp
iblofunmatch/: inter.py  topological_data_quality_0.py
samples/: dino_data.txt
sorting/: sorting.hh
